--- a/downloads.html
+++ b/downloads.html
@@ -3,7 +3,7 @@ layout: page
 title: Downloads
 ---
 
-<div class=page>
+<div>
 	<h2>Some files that might help you</h2>
 	<p class="lead">Some fonts implemented in my website:</p>
 	  <ul>
