--- a/great-things.html
+++ b/great-things.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 ---
-<div class=page>
+<div>
 	<h1 class="page-title">Do great things</h1>
 	<p class="lead">We all get the same 24 hours.
 	<p class="lead">So put aside your fears.
