优化字体显示，删除多余文件

--- a/downloads.html
+++ b/downloads.html
@@ -7,12 +7,10 @@ title: Downloads
 	<h2>Some files that might help you</h2>
 	<p class="lead">Some fonts implemented in my website:</p>
 	  <ul>
-	    <li><a href="/downloads/MyriadPro-Light.otf">Myriad Pro Light</a></li>
-	    <li><a href="/downloads/MyriadPro-Regular.otf">Myriad Pro Regular</a></li>
-	    <li><a href="/downloads/msyh.ttf">Microsoft YaHei</a></li>
-	    <li><a href="/downloads/msyhl.ttf">Microsoft YaHei Light</a></li>
+	    <li><a href="/public/fonts/MyriadPro-Light.otf">Myriad Pro Light</a></li>
+	    <li><a href="/public/fonts/MyriadPro-Regular.otf">Myriad Pro Regular</a></li>
 	  </ul>
-	<p class=message>The font files are really enormous and really user-unfriendly so I ended up this way</p>
+	<p class=message>The Myriad Pro font family is proprietary. It is designed by Adobe and used by Apple Inc. Refer to <a href="https://typekit.com/fonts/myriad-pro">This Typekit page</a> by Adobe for details,or see <a href="https://en.wikipedia.org/wiki/Myriad_(typeface)">This</a> or <a href="https://en.wikipedia.org/wiki/Typography_of_Apple_Inc.#Apple_Garamond">this</a> wiki page to know about how Apple implements Myriad fonts.</p>
 	<h2>The source files of my translations</h2>
 	  <ul>
 	    <li><a href="https://github.com/duoduoeeee/tr-source/archive/master.zip" color=green>Stable channel</a></li>
