--- a/downloads.html
+++ b/downloads.html
@@ -5,22 +5,20 @@ title: Downloads
 
 <div>
 	<h2>Some files that might help you</h2>
-	<p class="lead">Some fonts implemented in my website:</p>
+	<h3>Some fonts implemented in my website:</h3>
 	  <ul>
 	    <li><a href="/public/fonts/MyriadPro-Light.otf">Myriad Pro Light</a></li>
 	    <li><a href="/public/fonts/MyriadPro-Regular.otf">Myriad Pro Regular</a></li>
 	  </ul>
-	<p class=message>The Myriad Pro font family is proprietary. It is designed by Adobe and used by Apple Inc. Refer to <a href="https://typekit.com/fonts/myriad-pro">This Typekit page</a> by Adobe for details,or see <a href="https://en.wikipedia.org/wiki/Myriad_(typeface)">This</a> or <a href="https://en.wikipedia.org/wiki/Typography_of_Apple_Inc.#Apple_Garamond">this</a> wiki page to know about how Apple implements Myriad fonts.</p>
-	<h2>The source files of my translations</h2>
+	<p class=message>The Myriad Pro font family is proprietary. It is designed by Adobe and used by Apple Inc. Refer to <a href="https://typekit.com/fonts/myriad-pro">this Typekit page</a> by Adobe for details,or see <a href="https://en.wikipedia.org/wiki/Myriad_(typeface)">this</a> or <a href="https://en.wikipedia.org/wiki/Typography_of_Apple_Inc.#Apple_Garamond">this</a> wiki page to know about how Apple implements Myriad fonts.</p>
+	<h3>The source files of my translations</h3>
 	  <ul>
-	    <li><a href="https://github.com/duoduoeeee/tr-source/archive/master.zip" color=green>Stable channel</a></li>
-	    <li><a href="https://github.com/duoduoeeee/tr-source/archive/working.zip" color=orange>Currently working on</a></li>
+	    <li><a href="https://github.com/duoduoeeee/tr-source/archive/master.zip">Stable channel</a></li>
+	    <li><a href="https://github.com/duoduoeeee/tr-source/archive/working.zip">Currently working on</a></li>
 	    </ul>
 	<p class=message>The documents are written in Markdown format.</p>
-	<h2>Miscelleaneous</h2>
+	<h3>Miscelleaneous</h3>
 	 <ul>
 	   <li><a href=/downloads/LICENSE.md>The MIT license that this Jekyll theme applies to.</li>
 	   <li><a href=/downloads/README.md>The Help document that is included with this Jekyll theme.</li>
 	 </ul>
-
-
