--- a/great-things.html
+++ b/great-things.html
@@ -2,13 +2,11 @@
 layout: page
 ---
 <div>
-	<h1 class="page-title">Do great things</h1>
-	<p class="lead">We all get the same 24 hours.
-	<p class="lead">So put aside your fears.
-	<p class="lead">And don’t wait until someday.
-	<p class="lead">Because actions always speak loudest.
-	<p class="lead">And doing is how you say to the world, “this is me.”
-	<p class="lead">Do great things.</p>
+	<h1 class="page-title" align=center>Let's try out something new.</h1>
+	  <center><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=60% height=80% src="http://music.163.com/outchain/player?type=2&id=21224495&auto=0&height=66"></iframe></center>
+  <p align=center class=lead>Appreciating everyone who tries or just attempted to be different from the masses.</p>
+	<p align=center class=lead>It's them that make the world a better place.</p>
+
 	<hr />
-	<p align=center>There is no special announcement available currently.</p>
-	<p align=center>This lovely poem is from <a href=https://www.microsoft.com/en-us/windows/great-things>this Microsoft web page</a></p>
+  <p align=center>Let's witness something great around the coming Spring Festival.</p>
+</div>
