--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@ permalink: /404.html
 
 <div class="page">
   <h1 class="page-title">404: Page not found</h1>
-  <p class="lead">We are really sorry but the page you requested couldn't be found. This is commonly not your fault. <a href="/">Head back home</a> to try finding it again.</p>
+  <p>We are really sorry but the page you requested couldn't be found. This is commonly not your fault. <a href="/">Head back home</a> to try finding it again.</p>
   <hr />
-  <p align=right>Lingduo</p>
+  <small><p align=right>Lingduo</p></small>
 </div>
