--- a/great-things.html
+++ b/great-things.html
@@ -4,9 +4,9 @@ layout: page
 <div>
 	<h1 class="page-title" align=center>Let's try out something new.</h1>
 	  <center><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=60% height=80% src="http://music.163.com/outchain/player?type=2&id=21224495&auto=0&height=66"></iframe></center>
-  <p align=center class=lead>Appreciating everyone who tries or just attempted to be different from the masses.</p>
-	<p align=center class=lead>It's them that make the world a better place.</p>
+  <p align=center>Appreciating everyone who tries or just attempted to be different from the masses.</p>
+	<p align=center>It's them that make the world a better place.</p>
 
 	<hr />
-  <p align=center>Let's witness something great around the coming Spring Festival.</p>
+  <small><p align=center>Let's witness something great around the coming Spring Festival.</p></small>
 </div>
