--- a/great-things.html
+++ b/great-things.html
@@ -5,6 +5,11 @@ layout: page
 <link rel="stylesheet" href="/public/css/APlayer.min.css">
 <script type="text/javascript" src="/public/css/APlayer.min.js">
 </script>
+
+<div>
+	<h1 class="page-title" align=center>Let's try out something new.</h1>
+	<div id="player1" class="aplayer"></div>
+
 <script type="text/javascript">
 var ap = new APlayer({
     element: document.getElementById('player1'),
@@ -21,9 +26,6 @@ var ap = new APlayer({
 ap.init();
 </script>
 
-<div>
-	<h1 class="page-title" align=center>Let's try out something new.</h1>
-	  <center><div id="player1" class="aplayer"></div></center>
   <p align=center>Appreciating everyone who tries or just attempted to be different from the masses.</p>
 	<p align=center>It's them that make the world a better place.</p>
 
