--- a/great-things.html
+++ b/great-things.html
@@ -8,7 +8,7 @@ layout: page
 
 <div>
 	<h1 class="page-title" align=center>Let's try out something new.</h1>
-	<div id="player1" class="aplayer"></div>
+	<center><div id="player1" class="aplayer"></div></center>
 
 <script type="text/javascript">
 var ap = new APlayer({
