--- a/great-things.html
+++ b/great-things.html
@@ -2,32 +2,22 @@
 layout: page
 ---
 
-<link rel="stylesheet" href="/public/css/APlayer.min.css">
-<script type="text/javascript" src="/public/css/APlayer.min.js">
-</script>
-
 <div>
 	<h1 class="page-title" align=center>Let's try out something new.</h1>
-	<center><div id="player1" class="aplayer"></div></center>
-
+	<center>
+<audio src="https://gitcafe.com/duoduoeeee/picembed/raw/master/audio/discover.mp3" controls loop preload="auto">
+<script type="text/javascript" src="/public/css/jquery-2.1.3.js"></script>
+<script src="/public/css/audioplayer.js"></script>
 <script type="text/javascript">
-var ap = new APlayer({
-    element: document.getElementById('player1'),
-    narrow: false,
-    autoplay: false,
-    showlrc: false,
-    music: {
-        title: 'Discover',
-        author: 'Minnutes',
-        url: 'https://gitcafe.com/duoduoeeee/picembed/raw/master/audio/discover.mp3',
-        pic: 'https://gitcafe.com/duoduoeeee/picembed/raw/master/minnutes.jpg'
-    }
-});
-ap.init();
+    $( function()
+    {
+        $( 'audio' ).audioPlayer();
+    });
 </script>
+	</center>
 
   <p align=center>Appreciating everyone who tries or just attempted to be different from the masses.</p>
-	<p align=center>It's them that make the world a better place.</p>
+  <p align=center>It's them that make the world a better place.</p>
 
 	<hr />
   <small><p align=center>Let's witness something great around the coming Spring Festival.</p></small>
