music control fix

--- a/great-things.html
+++ b/great-things.html
@@ -6,7 +6,7 @@ layout: page
 	<h1 class="page-title" align=center>Let's try out something new.</h1>
 	<center>
 <audio src="https://gitcafe.com/duoduoeeee/picembed/raw/master/audio/discover.mp3" controls loop preload="auto">
-<script type="text/javascript" src="/public/css/jquery-2.1.3.js"></script>
+<script type="text/javascript" src="/public/css/jquery.js"></script>
 <script src="/public/css/audioplayer.js"></script>
 <script type="text/javascript">
     $( function()
