网站大换血

--- a/403.html
+++ b/403.html
@@ -1,11 +1,10 @@
 ---
-layout: default
+layout: notfound
 title: "403: Access denied"
 permalink: /403.html
 ---
 <div class="page">
-  <h1 class="page-title">403: Access denied</h1>
   <p>It seems that you are not permitted to view the content of this page. Contact the administrator if you have any question,or <a href="/">head back home</a> for a different page.</p>
   <hr />
-  <small><p align=right>Lingduo</p></small>
+  <small><p>Lingduo</p></small>
 </div>
