--- a/451.html
+++ b/451.html
@@ -1,9 +1,9 @@
 ---
-layout: notfound
+layout: default
 title: "451: Unavailable for legal reasons"
 permalink: /451.html
 ---
-<div class="page">
+<div>
   <p>Oops! This page has been manually removed due to the orders from the authorities.</p>
   <p>We are striving to comply with the authorities to verify harmful or illegal information on this site and provide users with a securer and cleaner online environment.</p>
   <p>There's a belief in our minds that one have to be patriot and faithful enough to his motherland once he is the citizen of that lovely country.</p>
