--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@ title: About
 <ul>
 <li>The <a  target=_blank href="https://git-scm.com">git</a> software for its amazing versioning capability, and [Git Extensions](https://gitextensions.github.io/) for its great GUI experience.</li>
 <li>The <a target=_blank href="https://rubygems.org/">gem</a>, <a target=_blank href="http://bundler.io/">Bundler</a> software as well as the <a target=_blank href="http://jekyllrb.org">Jekyll</a> project as site-building tools</li>
-<li>AnkitSultana, who originally built this Jekyll theme (as shown above)</li>
+<li>Scott Emmons, who originally built this Jekyll theme (as shown above)</li>
 <li><a target=_blank href="https://github.com">GitHub</a> as well as <a target=_blank href="https://pages.github.com">GitHub Pages</a> for the powerful and stable site building tools</li>
 <li>Various sources of interesting passages for me to translate from ;)</li>
 </ul>
