--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@ title: Home
   <hr />
   <center>
     <p>
-      <a target="_blank" href="about">About</a> |
-      <a target="_blank" href="privacy">Privacy</a> |
-      <a target="_blank" href="i">Interesting</a> |
-      <a target="_blank" href="https://status.lingduo.net.cn">Microblog</a> |
+      <a target="_blank" href="about">About</a>
+      <a target="_blank" href="privacy">Privacy</a>
+      <a target="_blank" href="i">Interesting</a>
+      <a target="_blank" href="https://status.lingduo.net.cn">Microblog</a>
       <a target="_blank" href="https://zhihu.com/people/duoduoeeee">Zhihu</a>
     </p>
   </center>
