--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ title: Home
 </div>
 
 <div class="message">
-  <p>June 27th, 2016 was the 7th anniversary of <a href="http://bilibili.com" target="_blank">Bilibili</a>'s foundation. Thanks to the (probably) biggest ACG video site in Mainland China. Cheers.</p>
+  <p color="red">July 1st,2016 is the 95th anniversary of the foundation of the CCP. Say hello to this ever evolving Chinese socialist party. <a href="http://cpc.people.com.cn/">中文</a> | <a href="http://english.cpc.people.com.cn/">English</a></p>
 </div>
 
 <div class="toc">
