--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ title: Panoply/blog
       <a target="_blank" href="privacy">Privacy</a> |
       <a target="_blank" href="i">Interesting</a> |
       <a target="_blank" href="https://status.lingduo.net.cn">Microblog</a> |
-      <a target="_blank" href="https://zhihu.com/people/duoduoeeee">Zhihu</a>
+      <a target="_blank" href="https://zhihu.com/people/duoduoeeee">Zhihu</a> |
+      <a href="/live-faq">我的直播说明</a>
     </p>
   </center>
 </div>
