--- a/index.html
+++ b/index.html
@@ -18,3 +18,7 @@ title: Lingduo's Blog
 
     <script src="/js/jquery.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
+	<script src="/js/highlight.js"></script>
+	<script>
+		$('p').highlight(['yousa'], ['泠鸢'], ['冷鸟'], ['急冻鸟'], ['帝企鹅']);
+	</script>
